Switch to static imports. Miscellaneous refactoring. Fix gcd.